# mtnards-toolkit

./: .buildinfo  .pre-commit-config.yaml  AGENTS.md  AGENT_CLI.md  CHANGELOG.md  CLI_USER_GUIDE.md  IMPLEMENTATION.md  README.md  changelog.html  contributing.html  examples.html  genindex.html  index.html  installation.html  mcp_server.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js
.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  mcp_server.doctree  quickstart.doctree
.doctrees/__intersphinx_cache__/: requests_objects.inv
.doctrees/api/: core.doctree  dcat.doctree  mcp.doctree
.github/workflows/: test.yml
_modules/: index.html
_modules/dartfx/mtnards/: base.html  catalog.html  classification.html  data_product.html  dcat.html  mtnards.html  process.html  server.html  variable.html
_sources/: changelog.rst.txt  contributing.rst.txt  examples.rst.txt  index.rst.txt  mcp_server.rst.txt  quickstart.rst.txt
_sources/api/: core.rst.txt
api/: core.html  dcat.html  mcp.html
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: core.rst  dcat.rst  mcp.rst
src/dartfx/mtnards/: __init__.py  base.py  catalog.py  classification.py  cli.py  data_product.py  dcat.py  mtnards.py  process.py  server.py  variable.py
src/dartfx/mtnards/mcp/: client_sse.py  client_stdio.py  demo.py  dot.env  server.py
tests/: conftest.py  hvdnet_anes_1948.croissant.jsonld  hvdnet_anes_1948.md  test_cli_resolution.py  test_croissant.py  test_dcat copy.py  test_dcat.py  test_markdown.py  test_model.py
